--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
-    "react": "^18.3.0",
+    "firebase": "^10.11.1",
+    "react": "^18.3.1",
     "react-dom": "^18.3.0",
     "react-router-dom": "^6.23.0",
     "router-dom": "^2.2.11"
