--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "firebase": "^10.11.1",
+    "fortawesome": "^0.0.1-security",
     "react": "^18.3.1",
     "react-dom": "^18.3.0",
     "react-router-dom": "^6.23.0",
